# ChangeLog for sys-kernel/genkernel
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  10 Aug 2011; Amadeusz Żołnowski <aidecoe@gentoo.org>
  genkernel-999999.ebuild:
  Added missing installation of genkernel.conf.

  10 Aug 2011; Amadeusz Żołnowski <aidecoe@gentoo.org>
  genkernel-999999.ebuild:
  Synced with genkernel-9999.ebuild from Portage.

  dracut dependency has been bumped to 010.

*genkernel-999999 (26 Mar 2011)

  26 Mar 2011; Amadeusz Żołnowski <aidecoe@gentoo.org>
  -genkernel-9999.ebuild, +genkernel-999999.ebuild:
  Changed version from 9999 to 999999, because of collision with Portage live
  ebuilds.

  16 Aug 2010; Amadeusz Żołnowski <aidecoe@aidecoe.name> genkernel-9999.ebuild:
  Minor QA fix.

  16 Aug 2010; Amadeusz Żołnowski <aidecoe@aidecoe.name> genkernel-9999.ebuild:
  Added dependencies required to convert DocBook documents to the Unix man page
  format.  The selinux dependency was moved to runtime ones.

  14 Aug 2010; Amadeusz Żołnowski <aidecoe@aidecoe.name> genkernel-9999.ebuild:
  - Put 'dosed' in pkg_preinst instead of 'sed -i' in src_install.
  - Info about bug report in pkg_postinst.

  12 Aug 2010; Amadeusz Żołnowski <aidecoe@aidecoe.name> +metadata.xml,
  genkernel-9999.ebuild:
  Removed src_unpack and moved the relevant line into src_install.

*genkernel-9999 (11 Aug 2010)

  11 Aug 2010; Amadeusz Żołnowski <aidecoe@aidecoe.name>
  +genkernel-9999.ebuild, +files/genkernel.bash:
  Ebuild is copied from the main Portage tree and completely rewritten by me.

  Shortly:
    - use my fork of Genkernel
    - depend on >=dracut-007
    - install bash-completion script only if bash-completion USE flag is
      enabled
    - removed download of additional packages since Dracut takes required
      things from the system
    - using ebuild functions instead of cp

  See ChangeLog in Portage tree for full history of Genkernel ebuilds.