@@ -2,17 +2,17 @@
 Hash: SHA1
 
 AUX genkernel.bash 2438 RMD160 b3d8e4436d8768c07d18c5aaff9c14fc16641729 SHA1 e15a9c6ef506aa6872a6a97d26751246dedded04 SHA256 e7de9771ba79ef878e2c9a21a1c1720f092c6047d3cc7d4a49ff6b90e7e2c248
-EBUILD genkernel-999999.ebuild 3704 RMD160 33ee5d51f6616cd98073638447b4704830501d11 SHA1 0a6c797b1f47bf5c642edf102e7e790dd80350ce SHA256 87b3d4ebaa98820d1dbeae7e27becf7c71c7b17742b61304ee6565f06f3f0e9e
-MISC ChangeLog 1943 RMD160 579852d41ce422e065249eb1f22c2c5cc694dd82 SHA1 c68f7dfea3cf2b9106f3254d59e395299b651f78 SHA256 51a9c316d3b4d62c1d97bb73861c9d2bed05f274919241398a6a5d0da3a51b93
-MISC metadata.xml 262 RMD160 0e2d90292964d831d63fc5a3167fb222bbe45468 SHA1 93ade0920111413a7e4b7fb340d371209e0c01a1 SHA256 8ad68efc2acfc2f8d98227b14bcd44771c3d35d41c03c722e267822a55d64edf
+EBUILD genkernel-999999.ebuild 3737 RMD160 79d08ddf86e72acf5be40e04d734875efb5d4bea SHA1 83c7af83b0dfc6e433a1df2cd0ae9efd53f3e539 SHA256 a4d1427f8940de3ab76744ee09f82c64b79fc1dfb4837c7d32591334dc9ebaee
+MISC ChangeLog 2114 RMD160 0fdcd7e7347d1841bce8db068ffc05813e68005f SHA1 ca6912ba3731fad4c9d975327a4d7b6d30679bcf SHA256 87d2f6e6457fd073068acac90aec24569aca8dfda8ac943de70400a1040f3202
+MISC metadata.xml 240 RMD160 ae5f2e2a5c5611903f91823280a24a12f9035f99 SHA1 78b240e4a416cf1b22665946f441cde61419be42 SHA256 d4d3a0998e46c180296304966ba65caca13417fc88819a8cf62faea7c2a9a53f
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.18 (GNU/Linux)
+Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQEcBAEBAgAGBQJOQnHcAAoJEPATRTHh2/q1YMQH/AnhVuV+EGERItizpAkvZJKC
-4D9KbQ6olA1K4WkV/edD3ru3/NprxyYBDP/St1KrXy4J6BsOKL/SRvolewnFh0F4
-lwpzg095fFQ1GZaQjeoKw4PmRDkDQczv8zZY65kFZD92U/VPVXF3pxLTQH0S3iLV
-W7bvS+x5uKTrflgN8am5APxUf8FcpfdKKrSkOtq9Kh9TwQh37m+wkViHCUx2jgjL
-Ddi0z/X/MZmFOALsPzG0i3gcalyiRH0C4OCh3Po4kdHzhyTpSxrb6h62eBmrezBI
-4YuzYj+EVN92oPZtj2qpfLKj9XEKNdcHOJG/EFl5wL5Br8SHaj9utUK3KiJyphY=
-=RR+3
+iQEcBAEBAgAGBQJP6sZ2AAoJEPATRTHh2/q1RDUIAIHjwZoh7t5/8ExzQ11dpW3v
+RObLA8YqTiw2c6iWsCxUPgqY8fxs6IKqjy2Km7AEb2wEP+mkF9r8zk1X9DFZd4sp
+0V38ZijpmT1JoE+pM0ZYHCDsAmbHGJJcMVv2dSRI6uWiz6ejuOSTmX1CdKy17b9H
+51QZf2165iV9os3jy1cHbnHwdcD8yiR/tOuFUfGYulNpbteop0208/7yPTWP5biY
+nGFd5CfitTX5JpZtCUURtibpO0vec9RIeTzt1WXGMHMSkvLFvJDFfeTx7p3w1FC3
+fV9bPJaF0S3+wVUd1WzXVU7CyVFxQBaNIelxTUy6KPMAeEGb1+B0c3VFYkzP9V0=
+=oOl/
 -----END PGP SIGNATURE-----
