@@ -1,6 +1,10 @@
 # ChangeLog for sys-kernel/genkernel
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  27 Jun 2012; Amadeusz Żołnowski <aidecoe@gentoo.org>
+  genkernel-999999.ebuild, metadata.xml:
+  Depended either on sys-kernel/dracut or on sys-kernel/dracut-aidecoe.
 
   10 Aug 2011; Amadeusz Żołnowski <aidecoe@gentoo.org>
   genkernel-999999.ebuild:
